# text-scaler-gnome-shell-extension

./: LICENSE  Makefile  Makefile.am  README.md  configure.ac  extension.js  metadata.json.in
po/: LINGUAS  de.po  fr.po  it.po  nl.po  pt_BR.po  uk.po
